--- a/agenda/pom.xml
+++ b/agenda/pom.xml
@@ -45,7 +45,7 @@
             <scope>test</scope>
         </dependency>
         
-        <!-- Jasperreports -->
+        <!-- Jasperreports  Luis-->
 		<dependency>
 		    <groupId>net.sf.jasperreports</groupId>
 		    <artifactId>jasperreports</artifactId>
@@ -88,7 +88,7 @@
             </plugin>
         </plugins>
     </build>
-
+<!--
     <repositories>
         <repository>
           <id>jasperreports</id>
@@ -99,5 +99,5 @@
           <url>https://jaspersoft.jfrog.io/jaspersoft/third-party-ce-artifacts/</url>
         </repository>
     </repositories>
-
+-->
 </project>
