--- a/agenda/pom.xml
+++ b/agenda/pom.xml
@@ -45,11 +45,11 @@
             <scope>test</scope>
         </dependency>
         
-        <!-- Jasperreports  Luis-->
+        <!-- Jasperreports -->
 		<dependency>
 		    <groupId>net.sf.jasperreports</groupId>
 		    <artifactId>jasperreports</artifactId>
-		    <version>6.0.0</version>
+		    <version>6.20.0</version>
 		</dependency>
 	    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
 		<dependency>
